--- a/neteja dades/fifa_practice_sol.ipynb
+++ b/neteja dades/fifa_practice_sol.ipynb
@@ -32647,7 +32647,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.4 ('.venv': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -32662,6 +32662,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.10.4"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "dc48caa387421aa653241f35d2eaf62125c7ab6574434095c132579023034781"
+   }
   }
  },
  "nbformat": 4,
