--- a/regression/Exercici regressió.ipynb
+++ b/regression/Exercici regressió.ipynb
@@ -89,7 +89,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -103,7 +103,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.4 | packaged by conda-forge | (main, Mar 24 2022, 17:32:50) [MSC v.1929 64 bit (AMD64)]"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "dc48caa387421aa653241f35d2eaf62125c7ab6574434095c132579023034781"
+   }
   }
  },
  "nbformat": 4,
