--- a/practica2/main.ipynb
+++ b/practica2/main.ipynb
@@ -2054,7 +2054,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fitting 5 folds for each of 1920 candidates, totalling 9600 fits\n"
+      "Fitting 5 folds for each of 1920 candidates, totalling 9600 fits\n",
+      "Mejor puntuación RandomForest: 0.8234322580645161\n",
+      "Mejores parámetros RandomForest: {'bootstrap': True, 'criterion': 'gini', 'max_depth': 4, 'max_features': 'sqrt', 'min_samples_leaf': 2, 'min_samples_split': 8, 'n_estimators': 10, 'n_jobs': -1}\n"
      ]
     }
    ],
@@ -2092,18 +2094,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 192 candidates, totalling 960 fits\n",
+      "Mejor puntuación DecisionTree: 0.8153806451612903\n",
+      "Mejores parámetros DecisionTree: {'criterion': 'entropy', 'max_depth': 10, 'max_features': 'sqrt', 'min_samples_leaf': 2, 'min_samples_split': 3}\n"
+     ]
+    }
+   ],
    "source": [
     "parametrosDT = {\n",
     "                 'max_depth' : [4, 6, 8, 10],\n",
-    "                 'n_estimators': [100, 75, 50, 25, 10],\n",
     "                 'max_features': ['sqrt'],\n",
     "                 'min_samples_split': [2, 3, 5, 8],\n",
     "                 'min_samples_leaf': [2, 3, 5, 8],\n",
-    "                 'bootstrap': [True, False],\n",
-    "                 'n_jobs': [-1],\n",
     "                 'criterion': ['gini', 'entropy', 'log_loss']\n",
     "                 }\n",
     "\n",
@@ -2168,9 +2177,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\alvar\\Documents\\GitHub\\ia_2022\\.venv\\lib\\site-packages\\sklearn\\linear_model\\_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\alvar\\Documents\\GitHub\\ia_2022\\.venv\\lib\\site-packages\\sklearn\\linear_model\\_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\alvar\\Documents\\GitHub\\ia_2022\\.venv\\lib\\site-packages\\sklearn\\linear_model\\_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\alvar\\Documents\\GitHub\\ia_2022\\.venv\\lib\\site-packages\\sklearn\\linear_model\\_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\alvar\\Documents\\GitHub\\ia_2022\\.venv\\lib\\site-packages\\sklearn\\linear_model\\_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\alvar\\Documents\\GitHub\\ia_2022\\.venv\\lib\\site-packages\\sklearn\\linear_model\\_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\alvar\\Documents\\GitHub\\ia_2022\\.venv\\lib\\site-packages\\sklearn\\linear_model\\_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\alvar\\Documents\\GitHub\\ia_2022\\.venv\\lib\\site-packages\\sklearn\\linear_model\\_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\alvar\\Documents\\GitHub\\ia_2022\\.venv\\lib\\site-packages\\sklearn\\linear_model\\_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\alvar\\Documents\\GitHub\\ia_2022\\.venv\\lib\\site-packages\\sklearn\\linear_model\\_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mejor puntuación LogisticRegression: 0.8025806451612902\n",
+      "Mejores parámetros LogisticRegression: {'max_iter': 100, 'solver': 'newton-cg'}\n"
+     ]
+    }
+   ],
    "source": [
     "parametrosLOG = {\n",
     "    'solver' : ['newton-cg', 'lbfgs', 'liblinear', 'sag', 'saga'],\n",
@@ -2178,7 +2222,7 @@
     "}\n",
     "\n",
     "LogReg = LogisticRegression()\n",
-    "gridSearchLOG = GridSearchCV(LogReg, scoring='accuracy', param_grid=parametrosLOG, cv=5, verbose=1)\n",
+    "gridSearchLOG = GridSearchCV(LogReg, scoring='accuracy', param_grid=parametrosLOG, cv=5, verbose=0)\n",
     "\n",
     "gridSearchLOG.fit(X_train, y_train)\n",
     "\n",
@@ -2214,14 +2258,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 70 candidates, totalling 350 fits\n",
+      "Mejor puntuación Perceptron: 0.7014838709677419\n",
+      "Mejores parámetros Perceptron: {'alpha': 0.0001, 'max_iter': 100, 'shuffle': False}\n"
+     ]
+    }
+   ],
    "source": [
     "parametrosPercep = {\n",
     "    'max_iter' : [100, 700, 1000, 2500, 5000],\n",
     "    'alpha' : [0.0001, 0.001, 0.01, 0.1, 1, 10, 100],\n",
-    "    'Shuffle' : [True, False]\n",
+    "    'shuffle' : [True, False]\n",
     "}\n",
     "\n",
     "\n",
