--- a/practica2/main.ipynb
+++ b/practica2/main.ipynb
@@ -2290,6 +2290,14 @@
     "print('Mejor puntuación Perceptron: {}'.format(gridSearchPercep.best_score_))\n",
     "print('Mejores parámetros Perceptron: {}'.format(gridSearchPercep.best_params_))"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## **Feature Importance**"
+   ]
   }
  ],
  "metadata": {
