--- a/practica2/main.ipynb
+++ b/practica2/main.ipynb
@@ -2298,7 +2298,7 @@
    "metadata": {},
    "source": [
     "La segunda etapa consiste en determinar la relevancia de cada característica en cada uno de los modelos, conocido como ``feature importance``.\n",
-    "Los modelos asignan pesos $w_{i}$ a los diferentes parámetros $x_{i}$ para poder hacer sus predicciones.\n",
+    "Los modelos asignan pesos wi a los diferentes parámetros xi para poder hacer sus predicciones.\n",
     "\n",
     "Para llevar a cabo esta tarea, debemos obtener los pesos de cada parámetro en todos los modelos."
    ]
